[package]
name = "staws"
version = "0.1.0"
authors = ["ethan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[toolchain]
channel = "nightly"

[dependencies]
bevy = { version = "0.7.0", features = ["dynamic"] }
bevy-inspector-egui = "0.11.0"
